@@ -18,3 +18,5 @@ pep8.txt
 *.tmp
 virtualenv
 .DS_Store
+
+*.prefs
