@@ -44,6 +44,7 @@ settings.py::
         'allauth.socialaccount.providers.angellist',
         'allauth.socialaccount.providers.bitbucket',
         'allauth.socialaccount.providers.bitly',
+        'allauth.socialaccount.providers.coinbase',
         'allauth.socialaccount.providers.dropbox',
         'allauth.socialaccount.providers.facebook',
         'allauth.socialaccount.providers.flickr',
